# kube-cel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-16-kube-cel-roadmap.md  2026-03-16-performance-best-practices.md
examples/: basic.rs  compiled_schema.rs  defaults_and_context.rs  static_analysis.rs  timestamp_duration.rs  vap_evaluation.rs
src/: analysis.rs  compilation.rs  defaults.rs  dispatch.rs  encoders.rs  escaping.rs  format.rs  ip.rs  jsonpatch.rs  lib.rs  lists.rs  math.rs  named_format.rs  quantity.rs  regex_funcs.rs  semver_funcs.rs  sets.rs  strings.rs  urls.rs  validation.rs  value_ops.rs  values.rs  vap.rs
tests/: cel_evaluation.rs  compilation_integration.rs  k8s_conformance.rs  validation_integration.rs
